--- a/about.html
+++ b/about.html
@@ -228,7 +228,8 @@
               
 
               <div class="small-image">
-                <img src="./images/about-last.png" alt="not found" class="img-fluid w-100">
+                <img src="https://placehold.co/300x213" alt="not found" class="img-fluid w-100">
+                <!-- <img src="./images/about-last.png" alt="not found" class="img-fluid w-100"> -->
               </div>
               
 
