--- a/areas-of-practice.html
+++ b/areas-of-practice.html
@@ -137,9 +137,10 @@
     <section class="practice_area practice_area_page">
       <div class="container">
         <div class="row area-wrapper">
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
-              <img src="./images/practice1.jpg" alt="farooq">
+              <!-- <img src="./images/practice1.jpg" alt="farooq"> -->
+              <img src="https://placehold.co/527x330" alt="farooq">
               <div class="overly">
                 <h3>
                   <p>
@@ -149,7 +150,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice2.jpg" alt="farooq">
               <div class="overly">
@@ -157,7 +158,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice3.jpg" alt="farooq">
               <div class="overly">
@@ -165,7 +166,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice4.jpg" alt="farooq">
               <div class="overly">
@@ -173,7 +174,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice5.jpg" alt="farooq">
               <div class="overly">
@@ -185,7 +186,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice6.jpg" alt="farooq">
               <div class="overly">
@@ -193,7 +194,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice7.jpg" alt="farooq">
               <div class="overly">
@@ -201,7 +202,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice8.png" alt="farooq">
               <div class="overly">
@@ -209,7 +210,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice9.jpg" alt="farooq">
               <div class="overly">
@@ -217,7 +218,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice10.png" alt="farooq">
               <div class="overly">
@@ -225,7 +226,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice11.jpg" alt="farooq">
               <div class="overly">
@@ -233,7 +234,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice12.jpg" alt="farooq">
               <div class="overly">
@@ -241,7 +242,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice13.jpg" alt="farooq">
               <div class="overly">
@@ -249,7 +250,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 col-lg-4 col-xl-3 pb-4">
+          <div class="col-12 col-sm-6 col-lg-4 col-xl-3 pb-4">
             <a class="image" href="practice_details.html">
               <img src="./images/practice14.jpg" alt="farooq">
               <div class="overly">
