--- a/founder-message.html
+++ b/founder-message.html
@@ -139,7 +139,8 @@
       <div class="container">
         <div class="founder_main">
           <div class="image">
-            <img src="images/founder.jpeg" alt="founder" class="img-fluid w-100">
+            <img src="https://placehold.co/254x282" alt="founder" class="img-fluid w-100">
+            <!-- <img src="images/founder.jpeg" alt="founder" class="img-fluid w-100"> -->
           </div>
           <div class="text">
             <h3 class="title">Founder</h3>
