--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
                 <div class="row justify-content-center mx-3 mx-xxl-0">
                   <div class="col-12 col-xl-6 col-xxl-6 px-0">
                     <a class="image" href="#">
-                      <img src="./images/area1.jpg" alt="farooq">
+                      <!-- <img src="./images/area1.jpg" alt="farooq"> -->
+                      <img src="https://placehold.co/1167x330" alt="farooq">
                       <div class="overly">
                         <h3>
                           <span>
@@ -351,7 +352,7 @@
                       </div>
                     </a>
                   </div>
-                  <div class="col-6 col-xl-3 col-xxl-3 px-0">
+                  <div class="col-12 col-sm-6 col-xl-3 col-xxl-3 px-0">
                     <a class="image" href="#">
                       <img src="./images/area2.jpg" alt="farooq">
                       <div class="overly">
@@ -359,9 +360,10 @@
                       </div>
                     </a>
                   </div>
-                  <div class="col-6 col-xl-3 col-xxl-3 px-0">
+                  <div class="col-12 col-sm-6 col-xl-3 col-xxl-3 px-0">
                     <a class="image" href="#">
-                      <img src="./images/area3.jpg" alt="farooq">
+                      <!-- <img src="./images/area3.jpg" alt="farooq"> -->
+                      <img src="https://placehold.co/584x330" alt="farooq">
                       <div class="overly">
                           <h3><span>Intellectual Property</span></h3>
                       </div>
@@ -369,7 +371,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-center mx-3 mx-xxl-0">
-                  <div class="col-6 col-xl-3 col-xxl-3 px-0">
+                  <div class="col-12 col-sm-6 col-xl-3 col-xxl-3 px-0">
                     <a class="image" href="#">
                       <img src="./images/area4.png" alt="farooq">
                       <div class="overly">
@@ -377,7 +379,7 @@
                       </div>
                     </a>
                   </div>
-                  <div class="col-6 col-xl-3 col-xxl-3 px-0">
+                  <div class="col-12 col-sm-6 col-xl-3 col-xxl-3 px-0">
                     <a class="image" href="#">
                       <img src="./images/area5.jpg" alt="farooq">
                       <div class="overly">
@@ -434,11 +436,12 @@
           </div>
         </div>
         <div class="row g-4">
-          <div class="col-6 col-lg-3">
+          <div class="col-12 col-sm-6 col-lg-3">
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
-                  <img src="images/pr-1.jpg" alt="pr-1" class="img-fluid w-100">
+                  <!-- <img src="images/pr-1.jpg" alt="pr-1" class="img-fluid w-100"> -->
+                  <img src="https://placehold.co/551x332" alt="pr-1" class="img-fluid w-100">
                 </div>
                 <div class="text">
                   <h3 class="title">LNG Floating Storage and Regasification Unit at Moheshkhali</h3>
@@ -446,7 +449,7 @@
               </a>
             </div>
           </div>
-          <div class="col-6 col-lg-3">
+          <div class="col-12 col-sm-6 col-lg-3">
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
@@ -458,7 +461,7 @@
               </a>
             </div>
           </div>
-          <div class="col-6 col-lg-3">
+          <div class="col-12 col-sm-6 col-lg-3">
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
@@ -470,7 +473,7 @@
               </a>
             </div>
           </div>
-          <div class="col-6 col-lg-3">
+          <div class="col-12 col-sm-6 col-lg-3">
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
@@ -497,7 +500,8 @@
             <div class="row">
               <div class="col-6 col-md-3 col-lg-3">
                 <div class="image">
-                  <img src="images/founder.jpeg" alt="founder" class="img-fluid w-100">
+                  <!-- <img src="images/founder.jpeg" alt="founder" class="img-fluid w-100"> -->
+                  <img src="https://placehold.co/253x280" alt="founder" class="img-fluid w-100">
                 </div>
               </div>
               <div class="col-md-9 col-lg-9">
