--- a/people.html
+++ b/people.html
@@ -139,9 +139,10 @@
         <div class="row">
           <div class="col-lg-11">
             <div class="row">
-              <div class="col-md-3 col-sm-5">
+              <div class="col-9 col-md-3 col-sm-5">
                 <div class="image">
-                  <img src="images/team/M.Ozair Farooq.jpeg" alt="founder" class="img-fluid w-100">
+                  <img src="https://placehold.co/408x490" alt="founder" class="img-fluid w-100">
+                  <!-- <img src="images/team/M.Ozair Farooq.jpeg" alt="founder" class="img-fluid w-100"> -->
                 </div>
               </div>
               <div class="col-md-9">
@@ -172,7 +173,7 @@
         <div class="row">
           <div class="col-lg-11">
             <div class="row">
-              <div class="col-md-3 col-sm-5">
+              <div class="col-9 col-md-3 col-sm-5">
                 <div class="image">
                   <img src="images/team/M IMTIAZ FAROOQ.jpeg" alt="founder" class="img-fluid w-100">
                 </div>
@@ -652,7 +653,8 @@
                 <a href="people_details.html" class="d-block w-100">
                   <div class="people_item">
                     <div class="image">
-                      <img src="images/team/M. FAISAL ISLAM.jpeg" alt="pe" class="img-fluid w-100">
+                      <img src="https://placehold.co/551x350" alt="pe" class="img-fluid w-100">
+                      <!-- <img src="images/team/M. FAISAL ISLAM.jpeg" alt="pe" class="img-fluid w-100"> -->
                     </div>
                     <div class="text text-center">
                       <h4 class="title">M. Faisal Islam</h4>
