--- a/people_details.html
+++ b/people_details.html
@@ -140,7 +140,8 @@
           <div class="col-lg-4">
             <div class="image">
               <div class="img">
-                <img src="images/founder.jpeg" alt="founder" class="img-fluid w-100">
+                <img src="https://placehold.co/394x437" alt="founder" class="img-fluid w-100">
+                <!-- <img src="images/founder.jpeg" alt="founder" class="img-fluid w-100"> -->
               </div>
               <div class="info d-flex mt-4">
                 <div class="row">
