--- a/projects.html
+++ b/projects.html
@@ -142,7 +142,8 @@
             <div class="projects_item">
               <a href="project-details.html" class="d-block w-100">
                 <div class="image">
-                  <img src="images/project1.png" alt="pr-1" class="img-fluid w-100">
+                  <!-- <img src="images/project1.png" alt="pr-1" class="img-fluid w-100"> -->
+                  <img src="https://placehold.co/551x331" alt="pr-1" class="img-fluid w-100">
                 </div>
                 <div class="text">
                   <h3 class="title">Dhaka MRT Line</h3>
