--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <nav class="navbar navbar-expand-lg d-none d-lg-block">
       <div class="container ps-0">
         <a class="navbar-brand me-0" href="index.html">
-          <img src="images/logo.png" alt="logo">
+          <img src="https://placehold.co/115x175" alt="logo">
+          <!-- <img src="images/logo.png" alt="logo"> -->
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
           aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -200,7 +201,8 @@
           </div>
         </div>
         <div class="item">
-          <img src="images/banner-home-2.png" alt="banner-home-2" />
+          <img src="https://placehold.co/1920x650" alt="banner-home-2" />
+          <!-- <img src="images/banner-home-2.png" alt="banner-home-2" /> -->
           <div class="item_text">
             <div class="container">
               <div class="row justify-content-center">
